# slint-swift-bindings

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Bridging/: FFI.h  Slint-overlay.yaml
Example/: CMakeLists.txt  Example.swift  OldExample.swift
Interop/: FFI.h  Slint-overlay.yaml  Slint.modulemap
Sources/: Actor.swift  AsyncChannel.swift  CMakeLists.txt  EventLoop.swift  Example.swift  Promise.swift  PropertyTracker.swift  SharedString.swift  Size.swift  Slint.swift  SlintActor.swift  Timer.swift  VTable.swift  WrappedClosure.swift
Sources/Core/: Callback.swift  Timer.swift
Sources/INCOMPLETE/: Property.swift  README.md  SharedVector.swift
Sources/INCOMPLETE/Interpreter/: Compiler.swift  ComponentDefinition.swift
Sources/Internal/: Callback.swift
Sources/Interpreter/: Compiler.swift  ComponentDefinition.swift
Sources/Runtime/: Actor.swift  EventLoop.swift  WrappedClosure.swift
Tests/: CMakeLists.txt  TestRunner.swift
Tests/Slint/: CMakeLists.txt  ExampleTests.swift  XCTTestManifests.swift  main.swift
Tests/SlintTests/: CMakeLists.txt  ExampleTests.swift
cmake/modules/: AddSwift.cmake
